# expo-vector-search

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.json  package-lock.json  package.json
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml
app/(tabs)/: _layout.tsx  debug.tsx  demo-classifier.tsx  demo-colors.tsx  demo-hamming.tsx  demo-jaccard.tsx  demo-vector-search.tsx  index.tsx  test-diagnostics.tsx  test-metrics.tsx
components/ui/: icon-symbol.tsx
constants/: theme.ts
hooks/: useVectorCatalog.ts
modules/expo-vector-search/: README.md  expo-module.config.json  index.ts  package.json
modules/expo-vector-search/android/: CMakeLists.txt  build.gradle
modules/expo-vector-search/android/src/main/cpp/: ExpoVectorSearchModule.cpp
modules/expo-vector-search/android/src/main/java/expo/modules/vectorsearch/: ExpoVectorSearchModule.kt
modules/expo-vector-search/cpp/: ExpoVectorSearch.h
modules/expo-vector-search/cpp/simsimd/: simsimd.h
modules/expo-vector-search/cpp/usearch/: index_plugins.hpp
modules/expo-vector-search/ios/: ExpoVectorSearch.podspec  ExpoVectorSearchModule.swift  ExpoVectorSearchView.swift
modules/expo-vector-search/src/: ExpoVectorSearch.types.ts  ExpoVectorSearchModule.ts
scripts/: README.md  download_and_convert_products.py  requirements.txt  split_dataset.py
